DEP: configure compiler plugin to exclude benchmarks and use incubator