@@ -12,12 +12,25 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
-        <compilerArgs>--enable-preview</compilerArgs>
         <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/bench/*.java</exclude>
+                    </excludes>
+                    <compilerArgs>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <!-- Code Coverage report generation -->
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -48,6 +61,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>--add-modules=jdk.incubator.vector</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
